--- a/arxiv/2022_08_arxiv.html
+++ b/arxiv/2022_08_arxiv.html
@@ -126,6 +126,29 @@ a:hover {text-decoration: underline; color: darkgray;}
 <a href="http://www.kaist.ac.kr/">Korea Advanced Institute of Science and Technology (KAIST)</a></span></div>-->
 <br>
 <p class="p1">20220801</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.14343">https://arxiv.org/abs/2207.14343</a></span> Fractonic Berezinskii-Kosterlitz-Thouless transition from a renormalization group perspective ****</p>
+<p class="p2"><br></p>
+<p class="p1">20220802</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.01032">https://arxiv.org/abs/2208.01032</a></span> Engineering SYK interactions in disordered graphene flakes under realistic experimental conditions ***** (Subir Sachdev)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.00730">https://arxiv.org/abs/2208.00730</a></span> Field-theoretic functional renormalization group formalism for non-Fermi liquids and its application to the antiferromagnetic quantum critical metal in two dimensions ***** (Andr ́es Schlief Sung-Sik Lee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.00019">https://arxiv.org/abs/2208.00019</a></span> Boundary logarithmic corrections to the dynamical correlation functions of one-dimensional spin-1/2 chains *** (Ipsita Mandal)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.12877">https://arxiv.org/abs/2206.12877</a></span> Emergent Dipole Gauge Fields and Fractons ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2008.10611">https://arxiv.org/abs/2008.10611</a></span> How Dynamical Quantum Memories Forget ***** (Jeongwan Haah, Matthew B. Hastings)</p>
+<p class="p2"><br></p>
+<p class="p1">20220803</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.01303">https://arxiv.org/abs/2208.01303</a></span> Emerging SYK physics and Wigner-Dyson distribution in polaron system</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.01183">https://arxiv.org/abs/2208.01183</a></span> Exact Low-Energy Solution for Critical Fermi Surfaces ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2204.02158">https://arxiv.org/abs/2204.02158</a></span> Quantum Field Theory Anomalies in Condensed Matter Physics *****</p>
+<p class="p2"><br></p>
+<p class="p1">20220804</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.01649">https://arxiv.org/abs/2208.01649</a></span> Hydrodynamic theory of scrambling in chaotic long-range interacting systems *** (Brian Swingle)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.01904">https://arxiv.org/abs/2208.01904</a></span> Unusual thermal Hall effect in the 3<i>d </i>cobalt Kitaev system Na2Co2TeO6 (Eun-Gook Moon, Je-Geun Park)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.01774">https://arxiv.org/abs/2208.01774</a></span> When Superconductivity Crosses Over: From BCS to BEC ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2205.02188">https://arxiv.org/abs/2205.02188</a></span> Higher Berry Phase of Fermions and Index Theorem *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.01044">https://arxiv.org/abs/2208.01044</a></span> Black Hole Multipoles in Higher-Derivative Gravity ****</p>
+<p class="p2"><br></p>
+<p class="p1">20220805</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.02605">https://arxiv.org/abs/2208.02605</a></span> Tricritical phenomena in holographic chiral phase transitions</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
