--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ a:hover {text-decoration: underline; color: darkgray;}
 
 My recent talk: <a href="https://meetings.aps.org/Meeting/MAR22/Event/433747">"Fractonic Quantum Phases in Breathing Pyrochlore Lattice"</b><br>	--><br>
 	
-pdf version of CV: <a href="20220725_SangEun_Han_Curriculum_Vitae.pdf">here (updated at 2022/07/25)</a>
+pdf version of CV: <a href="20220808_SangEun_Han_Curriculum_Vitae.pdf">here (updated at 2022/08/08)</a>
 <br>
 TA class materials: <a href="taclass.html">here</a>
 <br><br>
@@ -166,17 +166,17 @@ Articles related to my works:
 		<div class="cvitemcontent"> <b><u>SangEun Han</u></b>, <a href="https://sites.google.com/view/djschultz/" style="text-decoration:none;color:black">Daniel J. Schultz</a>, and <a href="https://sites.google.com/view/ybkimgroup/" style="text-decoration:none;color:black">Yong Baek Kim</a><br>
 			<a href="https://arxiv.org/abs/2206.02808">arXiv:2206.02808</a>
 		</li><li><div>
+		<span class="cvitem"> "Non-Fermi liquid induced by Bose metal with protected subsystem symmetries" </span>
+		<span class="cvperiod"></span>
+		</div>
+		<div class="cvitemcontent"> <b><u>SangEun Han</u></b> and <a href="https://sites.google.com/view/ybkimgroup/" style="text-decoration:none;color:black">Yong Baek Kim</a><br>
+			<a href="https://doi.org/10.1103/PhysRevB.106.L081106">Phys. Rev. B <b>106</b>, L081106</a> (<a href="https://arxiv.org/abs/2102.05052">arXiv:2102.05052</a>)
+		</li><li><div>
 		<span class="cvitem"> "Realization of fractonic quantum phases in the breathing pyrochlore lattice" </span>
 		<span class="cvperiod"></span>
 		</div>
 		<div class="cvitemcontent"> <b><u>SangEun Han</u></b>, <a href="https://scholar.google.com/citations?user=kQnM5s0AAAAJ" style="text-decoration:none;color:black">Adarsh S. Patri</a>, and <a href="https://sites.google.com/view/ybkimgroup/" style="text-decoration:none;color:black">Yong Baek Kim</a><br>
 			<a href="https://doi.org/10.1103/PhysRevB.105.235120">Phys. Rev. B <b>105</b>, 235120</a> (<a href="https://arxiv.org/abs/2109.03835">arXiv:2109.03835</a>)
-		</li><li><div>
-		<span class="cvitem"> "Non-Fermi liquid induced by the Bose metal with protected subsystem symmetries" </span>
-		<span class="cvperiod"></span>
-		</div>
-		<div class="cvitemcontent"> <b><u>SangEun Han</u></b> and <a href="https://sites.google.com/view/ybkimgroup/" style="text-decoration:none;color:black">Yong Baek Kim</a><br>
-			<a href="https://journals.aps.org/prb/accepted/fb075Yc9Oec1817a566b10e15d64b4928c7fdaf4b">Accepted in Phys. Rev. B Letter</a> (<a href="https://arxiv.org/abs/2102.05052">arXiv:2102.05052</a>)
 		</li><li><div>
 		<span class="cvitem"> "Lattice vibration as a knob for novel quantum criticality: Emergence of supersymmetry from spin-lattice coupling" </span>
 		<span class="cvperiod"></span>
