--- a/arxiv/2022_08_arxiv.html
+++ b/arxiv/2022_08_arxiv.html
@@ -148,7 +148,66 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.01044">https://arxiv.org/abs/2208.01044</a></span> Black Hole Multipoles in Higher-Derivative Gravity ****</p>
 <p class="p2"><br></p>
 <p class="p1">20220805</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.02605">https://arxiv.org/abs/2208.02605</a></span> Tricritical phenomena in holographic chiral phase transitions</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.02605">https://arxiv.org/abs/2208.02605</a></span> Tricritical phenomena in holographic chiral phase transitions</p><br>
+<p class="p1">20220808</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.02866">https://arxiv.org/abs/2208.02866</a></span> Discrete time crystal enabled by Stark many-body localization (Hong Yao)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.03132">https://arxiv.org/abs/2208.03132</a></span> Flow Equation and Fermion Gap in the Holographic Superconductors (Sang-Jin Sin)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.03174">https://arxiv.org/abs/2208.03174</a></span> Beyond DMFT: Spin Fluctuations, Pseudogaps and Superconductivity</p>
+<p class="p2"><br></p>
+<p class="p1">20220809</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.03709">https://arxiv.org/abs/2208.03709</a></span> Understanding resistance oscillation in CsV3Sb5 superconductor (Jung Hoon Han, Patrick A. Lee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.12610">https://arxiv.org/abs/2106.12610</a></span> Mean string field theory: Landau-Ginzburg theory for 1-form symmetries ***** (John McGreevy)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.09474">https://arxiv.org/abs/2207.09474</a></span> Conformal field theory for particle physicists ***</p>
+<p class="p2"><br></p>
+<p class="p1">20220810</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.04331">https://arxiv.org/abs/2208.04331</a></span> Non-invertible Time-reversal Symmetry **** (Yichul Choi, Ho Tat Lam, Shu-Heng Shao)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.04328">https://arxiv.org/abs/2208.04328</a></span> Loop current fluctuations and quantum critical transport (Dominic V. Else, T. Senthil)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.04407">https://arxiv.org/abs/2208.04407</a></span> Comment on ”Stranger than metals” ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.05052">https://arxiv.org/abs/2102.05052</a></span> Non-Fermi liquid induced by Bose metal with protected subsystem symmetries ****** (SangEun Han, Yong Baek Kim)</p>
+<p class="p2"><br></p>
+<p class="p1">20220811</p>
+<p class="p3"><a href="https://arxiv.org/abs/2208.05417">https://arxiv.org/abs/2208.05417</a><span class="s2"> Quantum Glasses **</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.05372">https://arxiv.org/abs/2208.05372</a></span> Bulk Bogoliubov Fermi arcs in non-Hermitian superconducting systems</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.05123">https://arxiv.org/abs/2208.05123</a></span> Collective spin modes in Fermi liquids with spin-orbit coupling **** (Dmitrii L. Maslov)<br>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.05360">https://arxiv.org/abs/2108.05360</a></span> Topologically enabled superconductivity **** (Elio J. K ̈onig, J ̈org Schmalian)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.05179">https://arxiv.org/abs/2208.05179</a></span> Fudan lectures on 2d string theory *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.05180">https://arxiv.org/abs/2208.05180</a></span> Fudan lectures on 2d conformal field theory *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.08841">https://arxiv.org/abs/2207.08841</a></span> Large N theory of critical Fermi surfaces II: conductivity ***** (Haoyu Guo, Aavishkar A. Patel, Ilya Esterlis, Subir Sachdev)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.13767">https://arxiv.org/abs/2207.13767</a></span> BISTRITZER-MACDONALD DYNAMICS IN TWISTED BILAYER GRAPHENE (ALLAN H. MACDONALD, MITCHELL LUSKIN)</p>
+<p class="p2"><br></p>
+<p class="p1">20220812</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.05933">https://arxiv.org/abs/2208.05933</a></span> Continuum effective Hamiltonian for graphene bilayers for an arbitrary smooth lattice deformation from microscopic theories ***** (Oskar Vafek, Jian Kang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.05953">https://arxiv.org/abs/2208.05953</a></span> Pseudo-magnetic fields, particle-hole asymmetry, and microscopic effective continuum Hamitonians of twisted bilayer graphene ***** (Jian Kang, Oskar Vafek)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.05899">https://arxiv.org/abs/2208.05899</a></span> Ferromagnetism in SU(N ) Kondo Lattice Model – SU(N ) double exchange and supersymmetry ***** (Keisuke Totsuka)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.05493">https://arxiv.org/abs/2208.05493</a></span> Superconductivity of non-Fermi liquids described by Sachdev-Ye-Kitaev models ***** (Chenyuan Li, Subir Sachdev Darshan G. Joshi)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2203.04990">https://arxiv.org/abs/2203.04990</a></span> Universal theory of strange metals from spatially random interactions ***** (Aavishkar A. Patel, Haoyu Guo, Ilya Esterlis, Subir Sachdev)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2203.13274">https://arxiv.org/abs/2203.13274</a></span> Evolution of dynamical signature in the X-cube fracton topological order **** (Zi Yang Meng)</p><br>
+<p class="p1">20220815</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.06374">https://arxiv.org/abs/2208.06374</a></span> Massless Fermions on a half-space The curious case of 2+1-dimensions</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.06108">https://arxiv.org/abs/2208.06108</a></span> Majorana nanowires, Kitaev chains, and spin models</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.06001">https://arxiv.org/abs/2208.06001</a></span> Hamilton Principle for Chiral Anomalies in Hydrodynamics</p>
+<p class="p2"><br></p>
+<p class="p1">20220816</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.07255">https://arxiv.org/abs/2208.07255</a></span> Quantum transport and magnetism of Dirac electrons in solids *** (Hiroki Isobe, Naoto Nagaosa)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.07367">https://arxiv.org/abs/2208.07367</a></span> Codimension-2 defects and higher symmetries in (3+1)D topological phases ***** (Maissam Barkeshli)</p>
+<p class="p2"><br></p>
+<p class="p1">20220817</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.07487">https://arxiv.org/abs/2208.07487</a></span> Simulating time evolution on distributed quantum computers (Finn Lasse Buessen, Ilia Khait)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2204.12579">https://arxiv.org/abs/2204.12579</a></span> Pairing symmetry of twisted bilayer graphene: a phenomenological synthesis ***** (Ethan Lake, Adarsh S. Patri, T. Senthil)</p>
+<p class="p2"><br></p>
+<p class="p1">20220818</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.08064">https://arxiv.org/abs/2208.08064</a></span> The Physics of Quantum Information ***** (John Preskill)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2202.06243">https://arxiv.org/abs/2202.06243</a></span> The Lieb-Schultz-Mattis Theorem A Topological Point of View ***** (Hal Tasaki)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.04132">https://arxiv.org/abs/2201.04132</a></span> The dipolar Bose-Hubbard model ***** (Ethan Lake, Michael Hermele, T. Senthil)</p>
+<p class="p2"><br></p>
+<p class="p1">20220819</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.08455">https://arxiv.org/abs/2208.08455</a></span> Z2 Spin Hopf Insulator: Helical Hinge States and Returning Thouless Pump (Penghao Zhu, Taylor L. Hughes)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.08449">https://arxiv.org/abs/2208.08449</a></span> Recent Developments in Fractional Chern Insulators ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.14813">https://arxiv.org/abs/2207.14813</a></span> CT or P Problem and Symmetric Gapped Fermion Solution</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1412.2393">https://arxiv.org/abs/1412.2393</a></span> Riemannian Geometry: Definitions, Pictures, and Results *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1607.03089">https://arxiv.org/abs/1607.03089</a></span> Gauge Theories and Fiber Bundles: Definitions, Pictures, and Results *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.08959">https://arxiv.org/abs/2208.08959</a></span> Old Ideas for New Physicists:1 **** (Tom Banks)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.13639">https://arxiv.org/abs/2111.13639</a></span> The 2PM Hamiltonian for binary Kerr to quartic in spin (Jung-Wook Kim)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
