--- a/arxiv/2022_08_arxiv.html
+++ b/arxiv/2022_08_arxiv.html
@@ -207,7 +207,49 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1412.2393">https://arxiv.org/abs/1412.2393</a></span> Riemannian Geometry: Definitions, Pictures, and Results *****</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1607.03089">https://arxiv.org/abs/1607.03089</a></span> Gauge Theories and Fiber Bundles: Definitions, Pictures, and Results *****</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.08959">https://arxiv.org/abs/2208.08959</a></span> Old Ideas for New Physicists:1 **** (Tom Banks)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.13639">https://arxiv.org/abs/2111.13639</a></span> The 2PM Hamiltonian for binary Kerr to quartic in spin (Jung-Wook Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.13639">https://arxiv.org/abs/2111.13639</a></span> The 2PM Hamiltonian for binary Kerr to quartic in spin (Jung-Wook Kim)</p><br>
+<p class="p1">20220822</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.09167">https://arxiv.org/abs/2208.09167</a></span> Toroidal scattering and nonreciprocal transport by magnetic impurities ** (Hiroki Isobe, Naoto Nagaosa)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.09101">https://arxiv.org/abs/2208.09101</a></span> Towards Non-Invertible Anomalies from Generalized Ising Models *** (Shang Liu, Wenjie Ji)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.09056">https://arxiv.org/abs/2208.09056</a></span> Hohenberg-Mermin-Wagner-type theorems and dipole symmetry</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.09001">https://arxiv.org/abs/2208.09001</a></span> Bulk-boundary correspondence for intrinsically-gapless SPTs from group cohomology ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.08994">https://arxiv.org/abs/2208.08994</a></span> Topological phase transitions at finite temperature</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.09409">https://arxiv.org/abs/2208.09409</a></span> Spin-triplet Superconductivity in Nonsymmorphic crystals ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.07947">https://arxiv.org/abs/2111.07947</a></span> Fractons, non-Riemannian Geometry, and Double Field Theory ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2204.12579">https://arxiv.org/abs/2204.12579</a></span> Pairing symmetry of twisted bilayer graphene: a phenomenological synthesis ***** (Ethan Lake, Adarsh S. Patri, T. Senthil)</p>
+<p class="p2"><br></p>
+<p class="p1">20220823</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.09581">https://arxiv.org/abs/2208.09581</a></span> Field theoretical approach to spin torques: Slonczewski torques</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.10486">https://arxiv.org/abs/2208.10486</a></span> Emergent U(1) Symmetries and τ-σ Duality in Gapless Superfluids or Superconductors</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.05754">https://arxiv.org/abs/2207.05754</a></span> Dimensionless physics: continuation</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.15320">https://arxiv.org/abs/2109.15320</a></span> C-P-T Fractionalization (Juven Wang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.07519">https://arxiv.org/abs/2106.07519</a></span> Quantum spin liquid in an RKKY-coupled two-impurity Kondo system ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1903.02947">https://arxiv.org/abs/1903.02947</a></span> A quantum Kolmogorov-Arnold-Moser theorem in the anisotropic Dicke model and its possible implications in the hybrid Sachdev-Ye-Kitaev models</p>
+<p class="p2"><br></p>
+<p class="p1">20220824</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.10516">https://arxiv.org/abs/2208.10516</a></span> Dirac electron under periodic magnetic field: Platform for fractional Chern insulator and generalized Wigner crystal **** (Liang Fu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.10800">https://arxiv.org/abs/2208.10800</a></span> A Non-Hermitian two coupled Sachdev-Ye-Kitaev model ***** (Sang-Jin Sin)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.10509">https://arxiv.org/abs/2208.10509</a></span> A Quantum Breakdown Model: from Many-body Localization to Chaos with Scars *** (Biao Lian)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.10517">https://arxiv.org/abs/2208.10517</a></span> Phase transition and fractionalization in superconducting Kondo lattice model **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.10518">https://arxiv.org/abs/2208.10518</a></span> Dual topological nonlinear sigma models of QED theory by dimensinoal reduction and monopole operators ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.10754">https://arxiv.org/abs/2208.10754</a></span> Nonsymmorphic spin-space cubic groups and SU(2)1 conformal invariance in one-dimensional spin-1/2 models *** (Ian Affleck)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.10519">https://arxiv.org/abs/2208.10519</a></span> Crossover from Fermi Arc to Full Fermi Surface **</p>
+<p class="p2"><br></p>
+<p class="p1">20220825</p>
+<p class="p3"><a href="https://arxiv.org/abs/2208.11648">https://arxiv.org/abs/2208.11648</a><span class="s2"> Theory of melting of glasses ***</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.11136">https://arxiv.org/abs/2208.11136</a></span> Nishimori’s cat: stable long-range entanglement from finite-depth unitaries and weak measurements **** (Guo-Yi Zhu, Nathanan Tantivasadakarn, Ashvin Vishwanath, Simon Trebst, Ruben Verresen)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.11699">https://arxiv.org/abs/2208.11699</a></span> Measurement-Prepared Quantum Criticality: from Ising model to gauge theory, and beyond ***** (Jong Yeon Lee, Wenjie Ji, Zhen Bi, Matthew P. A. Fisher)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.11142">https://arxiv.org/abs/2208.11142</a></span> Minimal continuum models for Fe-based Superlattices *** (Oskar Vafek)</p>
+<p class="p2"><br></p>
+<p class="p1">20220826</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.12169">https://arxiv.org/abs/2208.12169</a></span> Unitarity of Symplectic Fermion in α-vacua with Negative Central Charge ** (Shinsei Ryu, Junggi Yoon)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.12258">https://arxiv.org/abs/2208.12258</a></span> Boundary deconfined quantum criticality at transitions between symmetry-protected topological chains ****</p>
+<p class="p3"><a href="https://arxiv.org/abs/2208.12071">https://arxiv.org/abs/2208.12071</a><span class="s2"> Q/Z symmetry</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.12098">https://arxiv.org/abs/2208.12098</a></span> Binary-coupling sparse SYK: an improved model of quantum chaos and holography</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.11710">https://arxiv.org/abs/2208.11710</a></span> Extracting the Quantum Hall Conductance from a Single Bulk Wavefunction *** (Ashvin Vishwanath)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2203.05004">https://arxiv.org/abs/2203.05004</a></span> Nonlinear Bosonization of Fermi Surfaces: The Method of Coadjoint Orbits *** (Dam Thanh Son)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2202.07670">https://arxiv.org/abs/2202.07670</a></span> Ultrasound detection of emergent photons in generic quantum spin ice ***** (Sophia Simon, Adarsh S. Patri, Yong Baek Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.02211">https://arxiv.org/abs/2108.02211</a></span> Metrology of Band Topology via Resonant Inelastic X-ray Scattering ***** (Sangjin Lee, Kyung-Hwan Jin, Byungmin Kang, B. J. Kim, Gil Young Cho)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
