--- a/last.html
+++ b/last.html
@@ -104,14 +104,14 @@ a:hover {text-decoration: underline; color: darkgray;}
   ga('send', 'pageview');
 
 </script>
- <link href='//fonts.googleapis.com/css?family=Open+Sans:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
+ <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
 </head>
 
 <body style="background-color:#FFFFFF">
 
 <div id="center">
 
-<div style="font-size:75%" id="lastcenter">since 2014-12-31 / last update 2022-08-23</div>
+<div style="font-size:75%" id="lastcenter">since 2014-12-31 / last update 2022-08-26</div>
 
 </div>
 </body>
