--- a/arxiv/2022_08_arxiv.html
+++ b/arxiv/2022_08_arxiv.html
@@ -249,7 +249,27 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.11710">https://arxiv.org/abs/2208.11710</a></span> Extracting the Quantum Hall Conductance from a Single Bulk Wavefunction *** (Ashvin Vishwanath)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2203.05004">https://arxiv.org/abs/2203.05004</a></span> Nonlinear Bosonization of Fermi Surfaces: The Method of Coadjoint Orbits *** (Dam Thanh Son)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2202.07670">https://arxiv.org/abs/2202.07670</a></span> Ultrasound detection of emergent photons in generic quantum spin ice ***** (Sophia Simon, Adarsh S. Patri, Yong Baek Kim)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.02211">https://arxiv.org/abs/2108.02211</a></span> Metrology of Band Topology via Resonant Inelastic X-ray Scattering ***** (Sangjin Lee, Kyung-Hwan Jin, Byungmin Kang, B. J. Kim, Gil Young Cho)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.02211">https://arxiv.org/abs/2108.02211</a></span> Metrology of Band Topology via Resonant Inelastic X-ray Scattering ***** (Sangjin Lee, Kyung-Hwan Jin, Byungmin Kang, B. J. Kim, Gil Young Cho)</p><br>
+<p class="p1">20220829</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.12800">https://arxiv.org/abs/2208.12800</a></span> Unified theory of spin and charge in a ferromagnet **** (Oleg Tchernyshyov)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.11971">https://arxiv.org/abs/2208.11971</a></span> Extended quasiparticle Pad ́e approximation for non-Fermi liquids</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.12269">https://arxiv.org/abs/2208.12269</a></span> Hydrodynamics with helical symmetry *** (Andrew Lucas)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.12467">https://arxiv.org/abs/2208.12467</a></span> Periodic Clifford symmetry algebras on flux lattices ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.10945">https://arxiv.org/abs/2208.10945</a></span> Conformal Invariance in Quantum Field Theory</p>
+<p class="p2"><br></p>
+<p class="p1">20220830</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.12819">https://arxiv.org/abs/2208.12819</a></span> Entanglement negativity versus mutual information in the quantum Hall effect and beyond **** (Chia-Chuan Liu, Juliette Geoffrion, William Witczak-Krempa)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.12817">https://arxiv.org/abs/2208.12817</a></span> Extracting spinon self-energies from two-dimensional coherent spectroscopy *** (Rahul Nandkishore)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.13193">https://arxiv.org/abs/2208.13193</a></span> SL(2, Z) action of quantum field theory with U(1) subsystem symmetry ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.12827">https://arxiv.org/abs/2208.12827</a></span> Kondo breakdown transitions and phase-separation tendencies in valence-fluctuating heavy-fermion metals **** (Matthias Vojta)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.04665">https://arxiv.org/abs/2102.04665</a></span> Zeros of Green Functions in Topological Insulators **</p>
+<p class="p2"><br></p>
+<p class="p1">20220831</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.14056">https://arxiv.org/abs/2208.14056</a></span> Structure of domain walls in chiral spin liquids (Joel E. Moore)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.13795">https://arxiv.org/abs/2208.13795</a></span> An integrable road to a perturbative plateau</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.13807">https://arxiv.org/abs/2208.13807</a></span> Determining Kitaev interaction in spin-S honeycomb Mott insulators (Hae-Young Kee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.13888">https://arxiv.org/abs/2208.13888</a></span> Superconductivity out of a non-Fermi liquid. Free energy analysis. ***** (Yi-Ming Wu, Artem Abanov, Andrey V. Chubukov)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2107.09050">https://arxiv.org/abs/2107.09050</a></span> Multidome superconductivity in charge density wave kagome metals ***** (Yu-Ping Lin, Rahul M. Nandkishore)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
