--- a/arxiv/2022_09_arxiv.html
+++ b/arxiv/2022_09_arxiv.html
@@ -4,7 +4,7 @@
 <title>SangEun Han</title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=2.0, user-scalable=yes"/>
-
+<meta charset="utf-8">
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 <link rel="icon" href="favicon.ico" type="image/x-icon">
 <!-- png favicon--> 
@@ -84,9 +84,7 @@ a:hover {text-decoration: underline; color: darkgray;}
 #center {font-size:10pt; width:900px; background-color:FFFFFF; font-family:Open Sans; padding-top:5px;padding-right:10px; padding-bottom:5px; padding-left:10px; margin:0 auto; }
 }
 
-#lastcenter {width:100%; background-color:FFFFFF; text-align:center;
-        margin: 0;
-        padding: 0;}
+#last {width:100%; background-color:FFFFFF; text-align:center;}
 
 .cvitemize { font-size:110%; font-weight: bold;}
 .cvitem { font-weight: bold; font-family:Open Sans;}
@@ -104,14 +102,45 @@ a:hover {text-decoration: underline; color: darkgray;}
   ga('send', 'pageview');
 
 </script>
- <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
+ <link href='//fonts.googleapis.com/css?family=Open+Sans:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
 </head>
-
-<body style="background-color:#FFFFFF">
+<style type="text/css">
+    p.p1 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px 'Open Sans'}
+    p.p2 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px 'Open Sans'; min-height: 14.0px}
+    p.p3 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px 'Open Sans'; color: #dca10d}
+    span.s1 {color: #000000}
+    span.s2 {color: #000000}
+    span.s3 {color: #000000}
+    span.s4 {font: 12.0px '.Apple SD Gothic NeoI'; color: #dca10d}
+    span.s5 {color: #000000}
+  </style>
+<body style="background-color:#EFEFEF">
 
 <div id="center">
 
-<div style="font-size:75%" id="lastcenter">since 2014-12-31 / last update 2022-09-02</div>
+<div id="title">Today's arXiv</div>
+<iframe src="../titlecontent.html" style="width:100%; height:63; border:none"></iframe>
+<!---<div id="titlecontent">
+<span class="cvitemcontent">e-mail: sehan at kaist.ac.kr<br>
+<a href="http://physics.kaist.ac.kr/">Department of Physics</a><br>
+<a href="http://www.kaist.ac.kr/">Korea Advanced Institute of Science and Technology (KAIST)</a></span></div>-->
+<br>
+<p class="p1">20220901</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.14467">https://arxiv.org/abs/2208.14467</a></span> Exact Dirac-Bogoliubov-de Gennes dynamics for inhomogeneous quantum liquids ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.08841">https://arxiv.org/abs/2207.08841</a></span> Large N theory of critical Fermi surfaces II: conductivity ***** (Haoyu Guo, Aavishkar A. Patel, Ilya Esterlis, Subir Sachdev)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1904.00994">https://arxiv.org/abs/1904.00994</a></span> Quantum 4d Yang-Mills Theory and Time-Reversal Symmetric 5d Higher-Gauge Topological Field Theory: Anyonic-String/Brane Braiding Statistics to Link Invariants (Juven Wang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.07335">https://arxiv.org/abs/2111.07335</a></span> Rigorous Index Theory for One-Dimensional Interacting Topologi- cal Insulators ***** (Hal Tasaki)</p>
+<p class="p2"><br></p>
+<p class="p1">20220902</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.00474">https://arxiv.org/abs/2209.00474</a></span> Holographic superconductivity of a critical Fermi surface **** (Jörg Schmalian)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.00007">https://arxiv.org/abs/2209.00007</a></span> Many-Body Superconductivity in Topological Flat Bands ***** (B. Andrei Bernevig)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.00026">https://arxiv.org/abs/2209.00026</a></span> Topological Field Theories of Three-Dimensional Rotation Symmetric Insulators: Coupling Curvature and Electromagnetism **** (Taylor L. Hughes)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.00037">https://arxiv.org/abs/2209.00037</a></span> Multiversality and unnecessary criticality in one dimension (S.A. Parameswaran)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.00022">https://arxiv.org/abs/2209.00022</a></span> Nodal higher-order topological superconductivity from a C4-symmetric Dirac semimetal *** (Yuxuan Wang)</p>
+	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
+	</div>
+
+<!--<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-12-06</div>-->
 
 </div>
 </body>
